# spleeter-mnn

./: .gitignore  README.md  convert2onnx.py  test_estimator.py  test_mnn_estimator.py
Android/: cpu_gpu.sh
Android/AudioSeparation/: .project  build.gradle  settings.gradle
Android/AudioSeparation/app/: .project  build.gradle
Android/AudioSeparation/app/src/androidTest/java/com/bilibili/audioeffect/: ExampleInstrumentedTest.java
Android/AudioSeparation/app/src/main/: AndroidManifest.xml
Android/AudioSeparation/app/src/main/cpp/: native-lib.cpp
Android/AudioSeparation/app/src/main/java/com/bilibili/audioseparation/: BaseActivity.java  BaseApplication.java
Android/AudioSeparation/app/src/main/java/com/bilibili/audioseparation/activity/: AudioSeparationActivity.java  MainActivity.java
Android/AudioSeparation/app/src/main/java/com/bilibili/audioseparation/audio/: AudioEffectPlayer.java  AudioPlayer.java  AudioSeparation.java
Android/AudioSeparation/app/src/main/java/com/bilibili/audioseparation/utils/: ArrayUtils.java  ToastHelper.java  Utils.java
Android/AudioSeparation/app/src/main/res/drawable/: toast_background.xml
Android/AudioSeparation/app/src/main/res/font/: noto_sans.xml
Android/AudioSeparation/app/src/main/res/layout/: activity_audioseparation.xml  activity_main.xml  custom_toast.xml
Android/AudioSeparation/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
Android/AudioSeparation/app/src/test/java/com/bilibili/audioeffect/: ExampleUnitTest.java
Android/AudioSeparation/libaudioseparation/: .project  build.gradle
Android/AudioSeparation/libaudioseparation/src/androidTest/java/com/bilibili/libaudioeffect/: ExampleInstrumentedTest.java
Android/AudioSeparation/libaudioseparation/src/main/: AndroidManifest.xml
Android/AudioSeparation/libaudioseparation/src/main/cpp/: CMakeLists.txt  JniAudioSeparation.cpp  lib-audio-separation  utils.c  utils.h
Android/AudioSeparation/libaudioseparation/src/main/java/com/bilibili/libaudioseparation/: BLAudioSeparation.java  BLLibLoader.java
cpp/: CMakeLists.txt  main.cpp  test.sh
cpp/include/: Estimator.hpp  Executor.hpp  Expr.hpp  ImageProcess.hpp  Interpreter.hpp  Module.hpp  NeuralNetWorkOp.hpp  Optimizer.hpp  Scope.hpp  Stft.hpp  Tensor.hpp
cpp/include/Eigen/: Dense
cpp/lib/: libMNN.dylib
cpp/src/: CMakeLists.txt  Estimator.cpp
cpp/test/: CMakeLists.txt  test.cpp
models/: model.info
python/: test_estimator.py  test_mnn_estimator.py
python/spleeter/: estimator.py
